# ardupilot_sitl_sim_interface

./: CMakeLists.txt  README.md  package.xml
config/: boat.parm
include/ardupilot_sitl_sim_interface/: lib_ap_json.hpp  socket_example.hpp
nodes/: sim_interface.cpp
src/: lib_ap_json.cpp  socket_example.cpp
