<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ardupilot_sitl_sim_interface</name>
  <version>0.0.0</version>
  <description>Interface between ArduPilot's SITL simulaiton and custom physics simulations using ROS 2</description>
  <maintainer email="nicoline@finman.dk">Nicoline L. Thomsen</maintainer>
  <license>GNU General Public License, version 3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <depend>aaveq_ros_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
